--- a/PhpstormProjects/Naro-Blog/templates/Single-Post/Single-post.html.twig
+++ b/PhpstormProjects/Naro-Blog/templates/Single-Post/Single-post.html.twig
@@ -53,7 +53,7 @@
                   <div class="comment d-flex mb-4">
                     <div class="flex-shrink-0">
                       <div class="avatar avatar-sm rounded-circle">
-                        <img class="avatar-img" src="{{ ('/img/person-5.jpg') }}" alt="" class="img-fluid">
+                        <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                       </div>
                     </div>
                     <div class="flex-grow-1 ms-2 ms-sm-3">
@@ -71,7 +71,7 @@
                         <div class="reply d-flex mb-4">
                           <div class="flex-shrink-0">
                             <div class="avatar avatar-sm rounded-circle">
-                              <img class="avatar-img" src="{{ ('/img/person-4.jpg') }}" alt="" class="img-fluid">
+                              <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                             </div>
                           </div>
                           <div class="flex-grow-1 ms-2 ms-sm-3">
@@ -87,7 +87,7 @@
                         <div class="reply d-flex">
                           <div class="flex-shrink-0">
                             <div class="avatar avatar-sm rounded-circle">
-                              <img class="avatar-img" src="{{ ('/img/person-3.jpg') }}" alt="" class="img-fluid">
+                              <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                             </div>
                           </div>
                           <div class="flex-grow-1 ms-2 ms-sm-3">
@@ -106,7 +106,7 @@
                   <div class="comment d-flex">
                     <div class="flex-shrink-0">
                       <div class="avatar avatar-sm rounded-circle">
-                        <img class="avatar-img" src="{{ ('/img/person-2.jpg') }}" alt="" class="img-fluid">
+                        <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                       </div>
                     </div>
                     <div class="flex-shrink-1 ms-2 ms-sm-3">
