--- a/PhpstormProjects/Naro-Blog/templates/base.html.twig
+++ b/PhpstormProjects/Naro-Blog/templates/base.html.twig
@@ -52,12 +52,11 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a href="{{ path('app_index') }}">Accueil </a></li>
-                    <li><a href="{{ path('app_single') }}">Les Posts</a></li>
                     <li class="dropdown"><a href="{{ path('app_categorie') }}"><span>Categories</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                         <ul>
-                            <li><a href="#">categorie 1</a></li>
+                            <li><a href="{{ path('app_categorie') }}">categorie 1</a></li>
                             <li class="dropdown">
-                                <a href="#"><span>Deep Drop Down</span>
+                                <a href="{{ path('app_categorie') }}"><span>Deep Drop Down</span>
                                     <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                                 <ul>
                                     <li><a href="#">Deep Drop Down 1</a></li>
