--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1061,7 +1061,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Contact
+# Login
 --------------------------------------------------------------*/
 .contact .info-item {
   text-align: center;
