--- a/templates/Search-resultat/Search-post.html.twig
+++ b/templates/Search-resultat/Search-post.html.twig
@@ -25,12 +25,12 @@
                 <h3 class="category-title">Search Results</h3>
     
                 <div class="d-md-flex post-entry-2 small-img">
-                  <a href="single-post.html" class="me-4 thumbnail">
+                  <a href="{{ path('app_single') }}" class="me-4 thumbnail">
                     <img src="assets/img/post-landscape-6.jpg" alt="" class="img-fluid">
                   </a>
                   <div>
                     <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <h3><a href="single-post.html">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</a></h3>
+                    <h3><a href="{{ path('app_single') }}">What is the son of Football Coach John Gruden, Deuce Gruden doing Now?</a></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                     <div class="d-flex align-items-center author">
                       <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
@@ -42,12 +42,12 @@
                 </div>
     
                 <div class="d-md-flex post-entry-2 small-img">
-                  <a href="single-post.html" class="me-4 thumbnail">
+                  <a href="{{ path('app_single') }}" class="me-4 thumbnail">
                     <img src="assets/img/post-landscape-1.jpg" alt="" class="img-fluid">
                   </a>
                   <div>
                     <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <h3><a href="single-post.html">17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</a></h3>
+                    <h3><a href="{{ path('app_single') }}">17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</a></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                     <div class="d-flex align-items-center author">
                       <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
@@ -59,12 +59,12 @@
                 </div>
     
                 <div class="d-md-flex post-entry-2 small-img">
-                  <a href="single-post.html" class="me-4 thumbnail">
+                  <a href="{{ path('app_single') }}" class="me-4 thumbnail">
                     <img src="assets/img/post-landscape-2.jpg" alt="" class="img-fluid">
                   </a>
                   <div>
                     <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <h3><a href="single-post.html">The Best Homemade Masks for Face (keep the Pimples Away)</a></h3>
+                    <h3><a href="{{ path('app_single') }}">The Best Homemade Masks for Face (keep the Pimples Away)</a></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                     <div class="d-flex align-items-center author">
                       <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
@@ -76,12 +76,12 @@
                 </div>
     
                 <div class="d-md-flex post-entry-2 small-img">
-                  <a href="single-post.html" class="me-4 thumbnail">
+                  <a href="{{ path('app_single') }}" class="me-4 thumbnail">
                     <img src="assets/img/post-landscape-3.jpg" alt="" class="img-fluid">
                   </a>
                   <div>
                     <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <h3><a href="single-post.html">10 Life-Changing Hacks Every Working Mom Should Know</a></h3>
+                    <h3><a href="{{ path('app_single') }}">10 Life-Changing Hacks Every Working Mom Should Know</a></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                     <div class="d-flex align-items-center author">
                       <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
@@ -93,12 +93,12 @@
                 </div>
     
                 <div class="d-md-flex post-entry-2 small-img">
-                  <a href="single-post.html" class="me-4 thumbnail">
+                  <a href="{{ path('app_single') }}" class="me-4 thumbnail">
                     <img src="assets/img/post-landscape-4.jpg" alt="" class="img-fluid">
                   </a>
                   <div>
                     <div class="post-meta"><span class="date">Business</span> <span class="mx-1">&bullet;</span> <span>Jul 5th '22</span></div>
-                    <h3><a href="single-post.html">9 Half-up/half-down Hairstyles for Long and Medium Hair</a></h3>
+                    <h3><a href="{{ path('app_single') }}">9 Half-up/half-down Hairstyles for Long and Medium Hair</a></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat exercitationem magni voluptates dolore. Tenetur fugiat voluptates quas.</p>
                     <div class="d-flex align-items-center author">
                       <div class="photo"><img src="assets/img/person-2.jpg" alt="" class="img-fluid"></div>
@@ -298,7 +298,7 @@
                     <li><a href="category.html">Startups</a></li>
                     <li><a href="category.html">Travel</a></li>
                   </ul>
-                </div><!-- End Tags -->
+                </div><!-- End tags -->
     
               </div>
     
