--- a/templates/Single-Post/Single-post.html.twig
+++ b/templates/Single-Post/Single-post.html.twig
@@ -29,7 +29,7 @@
                   <p><span class="firstcharacter">L</span>orem ipsum dolor sit, amet consectetur adipisicing elit. Ratione officia sed, suscipit distinctio, numquam omnis quo fuga ipsam quis inventore voluptatum recusandae culpa, unde doloribus saepe labore alias voluptate expedita? Dicta delectus beatae explicabo odio voluptatibus quas, saepe qui aperiam autem obcaecati, illo et! Incidunt voluptas culpa neque repellat sint, accusamus beatae, cumque autem tempore quisquam quam eligendi harum debitis.</p>
     
                   <figure class="my-4">
-                    <img src="assets/img/post-landscape-1.jpg" alt="" class="img-fluid">
+                    <img src="{{ ('img/post-landscape-1.jpg') }}" alt="" class="img-fluid">
                     <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, odit? </figcaption>
                   </figure>
                   <p>Sunt reprehenderit, hic vel optio odit est dolore, distinctio iure itaque enim pariatur ducimus. Rerum soluta, perspiciatis voluptatum cupiditate praesentium repellendus quas expedita exercitationem tempora aliquam quaerat in eligendi adipisci harum non omnis reprehenderit quidem beatae modi. Ea fugiat enim libero, ipsam dicta explicabo nihil, tempore, nulla repellendus eos necessitatibus eligendi corporis cum? Eaque harum, eligendi itaque numquam aliquam soluta.</p>
@@ -38,7 +38,7 @@
                   <p>Dolorum, incidunt! Adipisci harum itaque maxime dolores doloremque porro eligendi quis, doloribus vel sit rerum sunt obcaecati nam suscipit nulla vitae alias blanditiis aliquam debitis atque illo modi et placeat. Ratione iure eveniet provident. Culpa laboriosam sed ad quia. Corrupti, earum, perferendis dolore cupiditate sint nihil maiores iusto tempora nobis porro itaque est. Ut laborum culpa assumenda pariatur et perferendis?</p>
                   <p>Est soluta veritatis laboriosam, consequuntur temporibus asperiores, fugit id a ullam sed, expedita sequi doloribus fugiat. Odio et necessitatibus enim nam, iste reprehenderit cupiditate omnis ut iure aliquid obcaecati, repellendus nemo provident eveniet tempora minus! Voluptates aut laboriosam, maiores nihil accusantium, a dolorum quaerat tenetur illo eum culpa cum laudantium sunt doloremque modi possimus magni? Perferendis cum repudiandae corrupti porro.</p>
                   <figure class="my-4">
-                    <img src="assets/img/post-landscape-5.jpg" alt="" class="img-fluid">
+                    <img src="{{ ('img/post-landscape-5.jpg') }}" alt="" class="img-fluid">
                     <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, odit? </figcaption>
                   </figure>
                   <p>Quis molestiae, dolorem consequuntur labore perferendis enim accusantium commodi optio, sequi magnam ad consectetur iste omnis! Voluptatibus, quia officia esse necessitatibus magnam tempore reprehenderit quo aspernatur! Assumenda, minus dolorem repellendus corporis corrupti quia temporibus repudiandae in. Sit rem aut, consectetur repudiandae perferendis nemo alias, iure ipsam omnis quam soluta, nobis animi quis aliquam blanditiis at. Dicta nemo vero sequi exercitationem.</p>
@@ -53,7 +53,7 @@
                   <div class="comment d-flex mb-4">
                     <div class="flex-shrink-0">
                       <div class="avatar avatar-sm rounded-circle">
-                        <img class="avatar-img" src="assets/img/person-5.jpg" alt="" class="img-fluid">
+                        <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                       </div>
                     </div>
                     <div class="flex-grow-1 ms-2 ms-sm-3">
@@ -71,7 +71,7 @@
                         <div class="reply d-flex mb-4">
                           <div class="flex-shrink-0">
                             <div class="avatar avatar-sm rounded-circle">
-                              <img class="avatar-img" src="assets/img/person-4.jpg" alt="" class="img-fluid">
+                              <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                             </div>
                           </div>
                           <div class="flex-grow-1 ms-2 ms-sm-3">
@@ -87,7 +87,7 @@
                         <div class="reply d-flex">
                           <div class="flex-shrink-0">
                             <div class="avatar avatar-sm rounded-circle">
-                              <img class="avatar-img" src="assets/img/person-3.jpg" alt="" class="img-fluid">
+                              <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                             </div>
                           </div>
                           <div class="flex-grow-1 ms-2 ms-sm-3">
@@ -106,7 +106,7 @@
                   <div class="comment d-flex">
                     <div class="flex-shrink-0">
                       <div class="avatar avatar-sm rounded-circle">
-                        <img class="avatar-img" src="assets/img/person-2.jpg" alt="" class="img-fluid">
+                        <img class="avatar-img" src="{{ ('/img/user.png') }}" alt="" class="img-fluid">
                       </div>
                     </div>
                     <div class="flex-shrink-1 ms-2 ms-sm-3">
@@ -160,7 +160,7 @@
                       <button class="nav-link" id="pills-trending-tab" data-bs-toggle="pill" data-bs-target="#pills-trending" type="button" role="tab" aria-controls="pills-trending" aria-selected="false">Trending</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                      <button class="nav-link" id="pills-latest-tab" data-bs-toggle="pill" data-bs-target="#pills-latest" type="button" role="tab" aria-controls="pills-latest" aria-selected="false">Latest</button>
+                  cla     <button class="nav-link" id="pills-latest-tab" data-bs-toggle="pill" data-bs-target="#pills-latest" type="button" role="tab" aria-controls="pills-latest" aria-selected="false">Latest</button>
                     </li>
                   </ul>
     
@@ -286,43 +286,36 @@
                   </div>
                 </div>
     
-                <div class="aside-block">
-                  <h3 class="aside-title">Video</h3>
-                  <div class="video-post">
-                    <a href="https://www.youtube.com/watch?v=AiFfDjmd0jU" class="glightbox link-video">
-                      <span class="bi-play-fill"></span>
-                      <img src="assets/img/post-landscape-5.jpg" alt="" class="img-fluid">
-                    </a>
-                  </div>
-                </div><!-- End Video -->
+
+
     
                 <div class="aside-block">
                   <h3 class="aside-title">Categories</h3>
                   <ul class="aside-links list-unstyled">
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Business</a></li>
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Culture</a></li>
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Sport</a></li>
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Food</a></li>
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Politics</a></li>
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Celebrity</a></li>
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Startups</a></li>
-                    <li><a href="category.html"><i class="bi bi-chevron-right"></i> Travel</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Business</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Culture</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Sport</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Food</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Politics</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Celebrity</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Startups</a></li>
+                    <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Travel</a></li>
                   </ul>
                 </div><!-- End Categories -->
     
                 <div class="aside-block">
                   <h3 class="aside-title">Tags</h3>
                   <ul class="aside-tags list-unstyled">
-                    <li><a href="category.html">Business</a></li>
-                    <li><a href="category.html">Culture</a></li>
-                    <li><a href="category.html">Sport</a></li>
-                    <li><a href="category.html">Food</a></li>
-                    <li><a href="category.html">Politics</a></li>
-                    <li><a href="category.html">Celebrity</a></li>
-                    <li><a href="category.html">Startups</a></li>
-                    <li><a href="category.html">Travel</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Business</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Culture</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Sport</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Food</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Politics</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Celebrity</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Startups</a></li>
+                    <li><a href="{{ path('app_categorie') }}">Travel</a></li>
                   </ul>
-                </div><!-- End Tags -->
+                </div><!-- End tags -->
     
               </div>
             </div>
