--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,13 +51,13 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="{{ path('app_index') }}">Blog</a></li>
-                    <li><a href="{{ path('app_single') }}">Single Post</a></li>
+                    <li><a href="{{ path('app_index') }}">Accueil </a></li>
                     <li class="dropdown"><a href="{{ path('app_categorie') }}"><span>Categories</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                         <ul>
-                            <li><a href="{{ path('app_search') }}">Search Result</a></li>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                            <li><a href="{{ path('app_categorie') }}">categorie 1</a></li>
+                            <li class="dropdown">
+                                <a href="{{ path('app_categorie') }}"><span>Deep Drop Down</span>
+                                    <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                                 <ul>
                                     <li><a href="#">Deep Drop Down 1</a></li>
                                     <li><a href="#">Deep Drop Down 2</a></li>
@@ -73,7 +73,12 @@
                     </li>
 
                     <li><a href="{{ path('app_about') }}">About</a></li>
-                    <li><a href="{{ path('app_contact') }}">Contact</a></li>
+                    {% if app.user %}
+                        <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                    {% else %}
+                        <a href="{{ path('app_login') }}">Se Connecter</a>
+                    {% endif %}
+
                 </ul>
             </nav><!-- .navbar -->
 
@@ -110,7 +115,7 @@
 
                             <div class="row g-5">
                                 <div class="col-lg-4">
-                                    <h3 class="footer-heading">About ZenBlog</h3>
+                                    <h3 class="footer-heading">About Naro Blog</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam ab, perspiciatis beatae autem deleniti voluptate nulla a dolores, exercitationem eveniet libero laudantium recusandae officiis qui aliquid blanditiis omnis quae. Explicabo?</p>
                                     <p><a href="{{ path('app_about') }}" class="footer-link-more">Learn More</a></p>
                                 </div>
@@ -122,7 +127,6 @@
                                         <li><a href="{{ path('app_categorie') }}"><i class="bi bi-chevron-right"></i> Categories</a></li>
                                         <li><a href="{{ path('app_single') }}"><i class="bi bi-chevron-right"></i> Single Post</a></li>
                                         <li><a href="{{ path('app_about') }}"><i class="bi bi-chevron-right"></i> About us</a></li>
-                                        <li><a href="{{ path('app_contact') }}"><i class="bi bi-chevron-right"></i> Contact</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-6 col-lg-2">
@@ -196,17 +200,9 @@
 
                             <div class="row justify-content-between">
                                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                                    <div class="copyright">
-                                        © Copyright <strong><span>ZenBlog</span></strong>. All Rights Reserved
-                                    </div>
 
-                                    <div class="credits">
-                                        <!-- All the links in the footer should remain intact. -->
-                                        <!-- You can delete the links only if you purchased the pro version. -->
-                                        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                                        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-                                        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                                    </div>
+
+
 
                                 </div>
 
