last update MAY

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -18,47 +18,26 @@
 
         <!-- ======= Hero Slider Section ======= -->
         <section id="hero-slider" class="hero-slider">
-            <div class="container-md" data-aos="fade-in">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="swiper sliderFeaturedPosts">
-                            <div class="swiper-wrapper">
+            <div class="container-md" data-aos="fade-in"><div class="row">
+                <div class="col-12">
+                    <div class="swiper sliderFeaturedPosts">
+                        <div class="swiper-wrapper">
+                            {% if latestPost %}
+                                <div class="swiper-slide">
+                                    <a href="{{ path('app_single', {id: latestPost.id}) }}" class="img-bg d-flex align-items-end" style="background-image: url('{{ vich_uploader_asset(latestPost.images, 'imageFile') }}');">
+                                        <div class="img-bg-inner">
+                                            <h2>{{ latestPost.titre }}</h2>
+                                            <p>{{ latestPost.contenu|slice(0, 100) }}</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            {% endif %}
+                              
 
-                                <div class="swiper-slide">
-                                    <a href="{{ path('app_single')}}" class="img-bg d-flex align-items-end" style="background-image: url('{{ ('/img/post-slide-1.jpg') }}');">
-                                        <div class="img-bg-inner">
-                                            <h2>{17 Pictures of Medium </h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="{{ path('app_single')}}" class="img-bg d-flex align-items-end" style="background-image: url('{{ ('/img/post-slide-2.jpg') }}');">
-                                        <div class="img-bg-inner">
-                                            <h2>17 Pictures of Medium Length Hair in Layers That Will Inspire Your New Haircut</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque est mollitia! Beatae minima assumenda repellat harum vero, officiis ipsam magnam obcaecati cumque maxime inventore repudiandae quidem necessitatibus rem atque.</p>
-                                        </div>
-                                    </a>
-                                </div>
+                             
 
-                                <div class="swiper-slide">
-                                    <a href="{{ path('app_single')}}" class="img-bg d-flex align-items-end" style="background-image: url('{{ ('/img/post-slide-3.jpg') }}');">
-                                        <div class="img-bg-inner">
-                                            <h2>13 Amazing Poems from Shel Silverstein with Valuable Life Lessons</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque est mollitia! Beatae minima assumenda repellat harum vero, officiis ipsam magnam obcaecati cumque maxime inventore repudiandae quidem necessitatibus rem atque.</p>
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <div class="swiper-slide">
-                                    <a href="{{ path('app_single')}}" class="img-bg d-flex align-items-end" style="background-image:  url('{{ ('/img/post-slide-4.jpg') }}');">
-                                        <div class="img-bg-inner">
-                                            <h2>9 Half-up/half-down Hairstyles for Long and Medium Hair</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque est mollitia! Beatae minima assumenda repellat harum vero, officiis ipsam magnam obcaecati cumque maxime inventore repudiandae quidem necessitatibus rem atque.</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
+                              
+                           
                             <div class="custom-swiper-button-next">
                                 <span class="bi-chevron-right"></span>
                             </div>
@@ -78,25 +57,30 @@
             <div class="container" data-aos="fade-up">
                 <div class="row g-5">
                     {% for post in posts %}
+
                         <div class="col-lg-4">
-                            <div class="post-thumb">
-                                {% if post.images %}
-                                <a href="{{ path('app_single')}}">
-                                    <img src="{{ vich_uploader_asset(post.images, 'imageFile') }}" alt="{{ post.images.imageName }}" class="img-fluid">
-                                </a>
-                    {% endif %}
-                            </div>
-                            <div class="post-content">
-                                <a href="{{ path('app_single') }}"><h3 class="post-title">{{ post.titre }}</h3></a>
-                                <p class="post-excerpt">{{ post.contenu|slice(0, 400) }}.</p>
+                            <div class="post-item">
+                                <div class="post-thumb">
+                                    {% if post.images is not null %}
+                                        <a href="{{ path('app_single', { id: post.id }) }}">
+                                            <img src="{{ vich_uploader_asset(post.images, 'imageFile') }}" alt="{{ post.images.imageName }}" class="img-fluid" style="width: 400px; height: 300px;">
+                                        </a>
+                                    {% else %}
+                                        <p>Ce post n'a pas d'image.</p>
+                                    {% endif %}
+                                </div>
+                                <div class="post-content">
+                                    <a href="{{ path('app_single', { id: post.id }) }}">
+                                        <h3 class="post-title">{{ post.titre }}</h3>
+                                    </a>
+                                    <p class="post-excerpt">{{ post.contenu|slice(0, 400) }}.</p>
+                                </div>
                             </div>
                         </div>
-                        {% endfor %}
-                    </div>
-
+                    {% endfor %}
                 </div> <!-- End .row -->
             </div>
-        </section> <!-- End Post Grid Section -->
+        </section>
 
 
 
@@ -107,4 +91,3 @@
       {% endblock %}
 
 {% endblock %}
-
