--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,46 +12,38 @@
     {% endblock %}
 
     <main id="main">
-        <section id="signup" class="signup mb-5">
-            <div class="container" data-aos="fade-up">
-                <div class="row">
-                    <div class="col-lg-12 text-center mb-5">
-                        <h1 class="page-title">Sign Up</h1>
-                    </div>
+        <div class="container mt-5">
+            <h1>Inscription</h1>
+    
+            {{ form_start(registrationForm) }}
+                <div class="form-group">
+                    {{ form_label(registrationForm.username) }}
+                    {{ form_widget(registrationForm.username) }}
+                    {{ form_errors(registrationForm.username) }}
                 </div>
-                <div class="form mt-5">
-                    {# templates/your_template.html.twig #}
-
-                    {# Afficher les messages flash de succès #}
-                    {% for flashMessage in app.flashes('success') %}
-                        <div class="alert alert-success">
-                            {{ flashMessage }}
-                        </div>
-                    {% endfor %}
-
-
-                    {{ form_start(registrationForm) }}
-                    <div class="row">
-                        <div class="form-group col-md-6">
-                            {{ form_row(registrationForm.email, { 'attr': {'class': 'form-control', 'placeholder': 'Your Email'} }) }}
-                        </div>
-                        <div class="form-group col-md-6">
-                            {{ form_row(registrationForm.username, { 'attr': {'class': 'form-control', 'placeholder': 'Your Username'} }) }}
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        {{ form_row(registrationForm.Password, { 'attr': {'class': 'form-control', 'placeholder': 'Your Password'} }) }}
-                    </div>
-                    <div class="form-group form-check">
-                        {{ form_row(registrationForm.AccepterLesConditions, { 'attr': {'class': 'form-check-input'} }) }}
-                        <label class="form-check-label" for="{{ registrationForm.AccepterLesConditions.vars.id }}" style="display: none;">accepter les conditions</label>
-                    </div>
-                    {{ form_errors(registrationForm) }}
-                    <button type="submit" class="btn btn-primary">Register</button>
-                    {{ form_end(registrationForm) }}
+    
+                <div class="form-group mt-3">
+                    {{ form_label(registrationForm.email) }}
+                    {{ form_widget(registrationForm.email) }}
+                    {{ form_errors(registrationForm.email) }}
                 </div>
-            </div>
-        </section>
+    
+                <div class="form-group mt-3">
+                    {{ form_label(registrationForm.plainPassword) }}
+                    {{ form_widget(registrationForm.plainPassword) }}
+                    {{ form_errors(registrationForm.plainPassword) }}
+                </div>
+    
+                <div class="form-group mt-3 form-check">
+                    {{ form_widget(registrationForm.accepterLesConditions) }}
+                    {{ form_label(registrationForm.accepterLesConditions) }}
+                    {{ form_errors(registrationForm.accepterLesConditions) }}
+                </div>
+    
+                <button type="submit" class="btn btn-primary mt-3">S'inscrire</button>
+            {{ form_end(registrationForm) }}
+        </div>
+      
     </main>
 
     {% block footer %}
